--- a/contact-test.html
+++ b/contact-test.html
@@ -215,15 +215,73 @@
                                     <h5 class="header">
                                         Contact Us
                                     </h5>
-                                    <script charset="utf-8" type="text/javascript"
-                                        src="//js.hsforms.net/forms/embed/v2.js"></script>
-                                    <script>
-                                        hbspt.forms.create({
-                                            region: "na1",
-                                            portalId: "45079038",
-                                            formId: "6aeb28af-d5c1-46ce-a0a4-d284b0c483ec"
-                                        });
-                                    </script>
+                                    <form action="#" class="form-group">
+                                        <!-- Lead add 1st row  -->
+                                        <div class="contact-form-right__row">
+                                            <!-- Full Name  -->
+                                            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                                                <label for="data" class="contact-form-right__title">
+                                                    Full Name<span class="red-star">*</span>
+                                                </label>
+                                                <div class="">
+                                                    <input type="text" name="full-name" placeholder="Enter full name"
+                                                        class="form-control" required />
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <!-- Lead add 3rd row  -->
+                                        <div class="contact-form-right__row">
+                                            <!-- Email  -->
+                                            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                                                <label for="data" class="contact-form-right__title">
+                                                    Phone Number<span class="red-star">*</span>
+                                                </label>
+                                                <div class="">
+                                                    <input type="number" name="phone"
+                                                        placeholder="Enter your phone number" class="form-control"
+                                                        required />
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <!-- Lead add 3rd row  -->
+                                        <div class="contact-form-right__row">
+                                            <!-- Email  -->
+                                            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                                                <label for="data" class="contact-form-right__title">
+                                                    Email<span class="red-star">*</span>
+                                                </label>
+                                                <div class="">
+                                                    <input type="email" name="email"
+                                                        placeholder="Enter your email address" class="form-control"
+                                                        required />
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <!-- Lead add 3rd row  -->
+                                        <div class="contact-form-right__row">
+                                            <!-- Email  -->
+                                            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                                                <label for="data" class="contact-form-right__title">
+                                                    Message<span class="red-star">*</span>
+                                                </label>
+                                                <div class="">
+                                                    <textarea class="form-control" placeholder="Type your message..."
+                                                        id="exampleFormControlTextarea1" rows="5"></textarea>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <!-- Lead add 6th row  -->
+                                        <div class="contact-form-right__btns">
+                                            <button type="submit"
+                                                class="btn btn-primary py-3 fw-500 fs-18 contact-form-btn w-100 mt-5">
+                                                Send Message
+                                            </button>
+                                        </div>
+                                    </form>
                                 </div>
                             </div>
                         </div>
