--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <title>Product Development & Engineering – Atlantic Manufacturing Solutions</title>
 
 
-        <meta name="description" content="South Florida's experts in product design, mechanical engineering, and prototype development. Bringing your ideas to life with custom fabrication solutions.">
-        <meta name="keywords" content="product development, prototype design, custom fabrication, engineering, manufacturing solutions">
+    <meta name="description"
+        content="South Florida's experts in product design, mechanical engineering, and prototype development. Bringing your ideas to life with custom fabrication solutions.">
+    <meta name="keywords"
+        content="product development, prototype design, custom fabrication, engineering, manufacturing solutions">
 
     <!-- CSS -->
     <link rel="stylesheet" href="/css/index.css">
@@ -80,8 +82,7 @@
 
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/product-development.html"
-                                        title="Product development">
+                                    <a class="nav-link" href="/product-development.html" title="Product development">
                                         Product development
                                     </a>
                                 </li>
@@ -132,23 +133,11 @@
         <div class="stacked-nav">
             <div class="container">
                 <ul class="navbar-nav d-flex flex-row justify-content-center align-items-center flex-wrap">
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="/product-development.html" title="Custom Product Design">
-                            Custom Product Design
-                        </a>
-                    </li> -->
-
                     <li>
                         <a class="nav-link" href="/custom-fabrication.html" title="Custom Fabrication">
                             Custom Fabrication
                         </a>
                     </li>
-
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="/prototype-development.html" title="Prototype Development">
-                            Prototype Development
-                        </a>
-                    </li> -->
 
                     <li class="nav-item">
                         <a class="nav-link" href="/manufacturing-consulting.html"
@@ -158,10 +147,22 @@
                     </li>
 
                     <li class="nav-item">
+                        <a class="nav-link" href="/about-us.html" title="About Us">
+                            About Us
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="/join-our-team.html" title="Mechanical Engineering Services">
+                            Join Our Team
+                        </a>
+                    </li>
+
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="/our-portfolio.html" title="Our Portfolio">
                             Our Portfolio
                         </a>
-                    </li>
+                    </li> -->
             </div>
         </div>
 
@@ -178,7 +179,7 @@
                     <div class="mt-2 text-center d-flex flex-md-row flex-column gap-3">
                         <a title="Request a Quote"
                             class="btn btn-primary  rounded-1 fs-19 text-uppercase px-5 fw-600 me-sm-4 mb-sm-0 mb-4"
-                            href="/contact.html"> 
+                            href="/contact.html">
                             Request a Quote
                         </a>
 
