--- a/join-our-team.html
+++ b/join-our-team.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no">
-    <title>Contact Us – Atlantic Manufacturing Solutions</title>
+    <title>Join Our Team - Careers at Atlantic Manufacturing Solutions</title>
 
     <meta name="description"
-        content="Get in touch with AMS for custom manufacturing, engineering services, and free consultations. Call us at +1 (305) 792-8110.">
-    <meta name="keywords" content="contact, engineering services, free consultation, South Florida, AMS">
+        content="Explore career opportunities at AMS. Join our team of engineers and designers passionate about bringing products to life.">
+    <meta name="keywords" content="careers, join AMS, engineering jobs, fabrication jobs, AMS team">
+
+
     <!-- CSS -->
     <link rel="stylesheet" href="/css/index.css">
 
@@ -131,107 +133,47 @@
         <div class="hero" data-aos="zoom-in">
             <div class="container hero-content">
                 <h1 class="text-center">
-                    Contact Us
+                    Join Our Team
                 </h1>
             </div>
             <img class="hero-img" src="/img/hero.jpg" alt="Hero background Image">
         </div>
     </section>
 
-    <section class="contact-bars mb-5 rounded-3 overflow-hidden">
+    <!-- About -->
+    <section id="about" class="about-us contact mt-5">
         <div class="container">
-            <div class="flex">
-                <!-- Service Areas -->
-                <div class="column">
-                    <div class="icon-div">
-                        <i class="fa-solid fa-map-location"></i>
-                    </div>
-                    <p class="title">
-                        Service Areas
-                    </p>
-                    <p class="text">
-                        12253 SW 129th Ct, <br> Miami, FL 33186
-                    </p>
-                </div>
-
-                <!-- Email Address -->
-                <div class="column">
-                    <div class="icon-div">
-                        <i class="fa-solid fa-envelope"></i>
-                    </div>
-                    <p class="title">
-                        Email Address
-                    </p>
-                    <a href="mailto: gloriaagency1@gmail.com">
-                        contact@atlanticmfgs.com
-                    </a>
-                </div>
-
-                <!-- Phone -->
-                <div class="column">
-                    <div class="icon-div">
-                        <i class="fa-solid fa-phone"></i>
-                    </div>
-                    <p class="title">
-                        Phone number
+            <div class="about-us-flex ">
+                <div class="info-div">
+                    <h3 class="header">
+                        Get Involved
+                    </h3>
+                    <p class="mb-4">
+                        Are you ready to contribute your skills to a forward-thinking team? If you’re passionate about
+                        innovation and excellence, we invite you to join our dynamic team. For inquiries, please use the
+                        email below to connect with us.
                     </p>
 
-                    <a title="Secondary Phone Number" href="tel:+13057928110">
-                        +1 (305) 792-8110
-                    </a>
-                </div>
+                    <p class="mb-3">
+                        <a href="mailto:contact@atlanticmfgs.com" class="text-info fw-600 text-center d-flex">
+                            <i class="fa-solid fa-envelope me-4 fs-24 text-secondary"></i>
+                            Contact@atlanticmfgs.com
+                        </a>
+                    </p>
 
-                <!-- Service Hours -->
-                <!-- <div class="column">
-                    <div class="icon-div">
-                        <i class="fa-regular fa-clock"></i>
-                    </div>
-                    <p class="title">
-                        Office Hours
-                    </p>
-                    <p class="text">
-                        Monday- Friday: 09 Am - 6 Pm
-                    </p>
                     <p>
-                        Saturday and Sundays: By Appointment
+                        <a class="fw-600 text-center d-flex text-info" href="tel:+13057928110"><i
+                                class="fa-solid fa-phone me-4 fs-24 text-secondary"></i> +1 (305) 792-8110</a>
                     </p>
-                </div> -->
-            </div>
-        </div>
-    </section>
 
-    <section class="map">
-        <div class="container">
-
-            <div class="row flex-md-row flex-row-reverse flex-column-reverse rounded-0">
-                <div class="contact-section__wrapper rounded-0">
-                    <!-- Contact Details -->
-                    <div class="contact-section rounded-0">
-                        <div class="row contact-section__row">
-
-                            <!-- CONTACT FORM STARTS HERE -->
-                            <div class="col-12">
-                                <div class="contact-section__form">
-                                    <h5 class="header">
-                                        Contact Us
-                                    </h5>
-                                    <script charset="utf-8" type="text/javascript"
-                                        src="//js.hsforms.net/forms/embed/v2.js"></script>
-                                    <script>
-                                        hbspt.forms.create({
-                                            region: "na1",
-                                            portalId: "45079038",
-                                            formId: "6aeb28af-d5c1-46ce-a0a4-d284b0c483ec"
-                                        });
-                                    </script>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                </div>
+                <div class="img-div">
+                    <img style="transform: scaleX(-1);" src="/img/city.jpg" alt="Atlantic">
                 </div>
             </div>
         </div>
     </section>
+
 
     <footer>
         <hr />
