--- a/custom-fabrication.html
+++ b/custom-fabrication.html
@@ -197,15 +197,15 @@
                 <div class="tab-pane active" id="1a">
                     <div class="flex">
                         <div class="info-div">
-                            <p class="heading">
+                             <p class="heading">
                                 Customer Focused
                             </p>
 
                             <p class="info">
-                                We are a team of experienced engineers and designers who are passionate about bringing
-                                your
-                                product to life. We offer a wide range of services to help you with all your metal
-                                fabrication needs.
+                                Customer satisfaction is our top priority. We work closely with our clients to
+                                understand their needs and deliver solutions that exceed their expectations. Our team is
+                                dedicated to providing exceptional service and support throughout the entire project
+                                lifecycle.
                             </p>
 
                             <ul>
@@ -242,10 +242,10 @@
                             </p>
 
                             <p class="info">
-                                We are a team of experienced engineers and designers who are passionate about bringing
-                                your
-                                product to life. We offer a wide range of services to help you with all your metal
-                                fabrication needs.
+                                We are a locally owned and operated business that is committed to providing the best
+                                manufacturing solutions in South Florida. Our team of experienced engineers and designers
+                                is passionate about bringing your product to life. We offer a wide range of services to
+                                help you with all your metal fabrication needs.
                             </p>
 
                             <ul>
@@ -277,22 +277,23 @@
                 <div class="tab-pane" id="3a">
                     <div class="flex">
                         <div class="info-div">
-                            <p class="heading">
+                           <p class="heading">
                                 Commitment to quality
                             </p>
 
                             <p class="info">
-                                We are a team of experienced engineers and designers who are passionate about bringing
-                                your
-                                product to life. We offer a wide range of services to help you with all your metal
-                                fabrication needs.
+                                At Atlantic Manufacturing Solutions (AMS), we are committed to providing the highest
+                                quality manufacturing solutions in South Florida. Our team of experienced engineers and
+                                designers is dedicated to delivering exceptional results that meet and exceed our clients'
+                                expectations. We take pride in our work and strive to ensure that every project is
+                                completed to the highest standards of quality and craftsmanship.
                             </p>
 
                             <ul>
+                                <li><i class="fa-solid fa-check"></i>Commitment to quality</li>
                                 <li><i class="fa-solid fa-check"></i>Product Development</li>
                                 <li><i class="fa-solid fa-check"></i>Machine Design</li>
                                 <li><i class="fa-solid fa-check"></i>Manufacturing Optimization</li>
-                                <li><i class="fa-solid fa-check"></i>Manufacturer Sourcing</li>
                             </ul>
                             <div class="d-flex gap-3 flex-wrap">
                                 <a title="Call Now" class="btn btn-light rounded-1 px-5 fs-20 fw-600"
