--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no">
-    <title>Product Development & Engineering – Atlantic Manufacturing Solutions</title>
+    <title>Product Development & Engineering – AMS</title>
 
 
     <meta name="description"
@@ -591,17 +591,17 @@
                             </p>
 
                             <p class="info">
-                                We are a team of experienced engineers and designers who are passionate about bringing
-                                your
-                                product to life. We offer a wide range of services to help you with all your metal
-                                fabrication needs.
+                                Customer satisfaction is our top priority. We work closely with our clients to
+                                understand their needs and deliver solutions that exceed their expectations. Our team is
+                                dedicated to providing exceptional service and support throughout the entire project
+                                lifecycle.
                             </p>
 
                             <ul>
+                                <li><i class="fa-solid fa-check"></i>Customer Focused</li>
                                 <li><i class="fa-solid fa-check"></i>Product Development</li>
                                 <li><i class="fa-solid fa-check"></i>Machine Design</li>
                                 <li><i class="fa-solid fa-check"></i>Manufacturing Optimization</li>
-                                <li><i class="fa-solid fa-check"></i>Manufacturer Sourcing</li>
                             </ul>
 
                             <div class="d-flex gap-3 flex-wrap">
@@ -631,10 +631,10 @@
                             </p>
 
                             <p class="info">
-                                We are a team of experienced engineers and designers who are passionate about bringing
-                                your
-                                product to life. We offer a wide range of services to help you with all your metal
-                                fabrication needs.
+                                We are a locally owned and operated business that is committed to providing the best
+                                manufacturing solutions in South Florida. Our team of experienced engineers and designers
+                                is passionate about bringing your product to life. We offer a wide range of services to
+                                help you with all your metal fabrication needs.
                             </p>
 
                             <ul>
@@ -671,17 +671,18 @@
                             </p>
 
                             <p class="info">
-                                We are a team of experienced engineers and designers who are passionate about bringing
-                                your
-                                product to life. We offer a wide range of services to help you with all your metal
-                                fabrication needs.
+                                At Atlantic Manufacturing Solutions (AMS), we are committed to providing the highest
+                                quality manufacturing solutions in South Florida. Our team of experienced engineers and
+                                designers is dedicated to delivering exceptional results that meet and exceed our clients'
+                                expectations. We take pride in our work and strive to ensure that every project is
+                                completed to the highest standards of quality and craftsmanship.
                             </p>
 
                             <ul>
+                                <li><i class="fa-solid fa-check"></i>Commitment to quality</li>
                                 <li><i class="fa-solid fa-check"></i>Product Development</li>
                                 <li><i class="fa-solid fa-check"></i>Machine Design</li>
                                 <li><i class="fa-solid fa-check"></i>Manufacturing Optimization</li>
-                                <li><i class="fa-solid fa-check"></i>Manufacturer Sourcing</li>
                             </ul>
                             <div class="d-flex gap-3 flex-wrap">
                                 <a title="Call Now" class="btn btn-light rounded-1 px-5 fs-20 fw-600"
@@ -715,9 +716,10 @@
                     </h3>
 
                     <p class="info mb-4">
-                        We are a team of experienced engineers and designers who are passionate about bringing your
-                        product to life. We offer a wide range of services to help you with all your metal fabrication
-                        needs.
+                        At Atlantic Manufacturing Solutions (AMS), we are dedicated to providing the best manufacturing
+                        solutions in South Florida. Our team of experienced engineers and designers is passionate about
+                        bringing your product to life. We offer a wide range of services to help you with all your metal
+                        fabrication needs.
                     </p>
 
                     <div class="d-flex gap-3 flex-wrap">
